Removed not used classes